[package]
name = "ndn-repo-cluster"
description = "Distributed coordination layer above ndn-repo: replication, capacity-aware placement, heartbeat failover"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[dependencies]
ndn-repo   = { workspace = true }
ndn-sync   = { workspace = true }
ndn-packet = { workspace = true, features = ["std"] }
ndn-tlv    = { workspace = true, features = ["std"] }
bytes      = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["sync", "rt", "macros", "time"] }
tokio-util = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
web-time   = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
