[package]
name = "ndn-repo"
description = "Persistent named-data repository (ndnd RepoCmd-compatible): durable ingest + serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[dependencies]
ndn-tlv    = { workspace = true, features = ["std"] }
ndn-packet = { workspace = true, features = ["std"] }
ndn-sync   = { workspace = true }
bytes      = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
