[package]
name = "ndn-repo"
description = "Persistent named-data repository (ndnd RepoCmd-compatible): durable ingest + serve"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.scope]
classification = "extension"

[features]
# Durable on-disk DataStore backend (native). On by default; disable for a
# target-agnostic, codec-only build (e.g. wasm).
default = ["fjall-store"]
fjall-store = ["dep:fjall"]
# The runnable `ndn-repo` daemon (Unix-socket IPC to a forwarder). Off by
# default so the library stays light; build with `--features bin`.
bin = ["fjall-store", "dep:ndn-app", "dep:ndn-ipc", "dep:ndn-ipc-shm", "dep:anyhow", "dep:tracing-subscriber"]

[dependencies]
ndn-tlv      = { workspace = true, features = ["std"] }
ndn-packet   = { workspace = true, features = ["std"] }
ndn-sync     = { workspace = true }
ndn-security = { workspace = true }
bytes        = { workspace = true, features = ["std"] }
tokio      = { workspace = true, features = ["sync", "rt", "macros"] }
tokio-util = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
fjall      = { workspace = true, optional = true }
# Daemon-only (feature `bin`).
ndn-app            = { workspace = true, optional = true }
ndn-ipc            = { workspace = true, optional = true }
ndn-ipc-shm        = { workspace = true, optional = true }
anyhow             = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[[bin]]
name = "ndn-repo"
required-features = ["bin"]

[dev-dependencies]
tokio      = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tempfile   = "3"
